perf: Compact sparse selections, borrow forwarded columns; phase 2 docs
- A filter only forwards a selection when at least half of the rows
  survive (sparkvector.selection.minFraction); below that the downstream
  kernels would walk every physical row for a handful of survivors (Q6
  keeps 2%), so it compacts once instead. Projections apply the same
  policy before forwarding.
- Forwarded projection columns are borrowed whatever their class
  (BorrowedColumnVector delegates reads and never closes), instead of
  being copied when the child is a Spark or Comet scan.
- TpchRunner: --conf key=value for ad-hoc settings; result checksum on
  10 significant digits, since interleaved accumulators round double
  sums in a different order than Spark (12th digit on Q1).
- docs/results.md: phase 2 table with the comet-scan-vector-shuffle
  column (Q1 1.35x, within 3% of native Comet; identical results),
  interleave JMH numbers, the C Data bridge, AVX-512 caveats. README and
  docs/comet.md describe selection vectors, the Final aggregate, the
  Comet shuffle bridge and the new knobs.